PROJECT(GStreamerPlugin)

INCLUDE(${QT_USE_FILE})
INCLUDE(UsePkgConfig)

PKGCONFIG(libxml-2.0 LIBXML_INCLUDE_DIR LIBXML_LIB_DIR LIBXML_LD_FLAGS LIBXML_CPP_FLAGS)
PKGCONFIG(glib-2.0 GLIB_INCLUDE_DIR GLIB_LIB_DIR GLIB_LD_FLAGS GLIB_CPP_FLAGS)
PKGCONFIG(gstreamer-0.10 GST_INCLUDE_DIR GST_LIB_DIR GST_LD_FLAGS GST_CPP_FLAGS)

INCLUDE_DIRECTORIES(${LIBXML_INCLUDE_DIR} ${GLIB_INCLUDE_DIR} ${GST_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/core/interfaces)

ADD_DEFINITIONS(-DQT_PLUGIN -DQT_SHARED)
ADD_DEFINITIONS(${LIBXML_CPP_FLAGS} ${GLIB_CPP_FLAGS} ${XINE_CPP_FLAGS})

SET(GStreamerPlugin_SRCS
    gstreamerplugin.cpp
)

SET(GStreamerPlugin_HDRS
	gstreamerplugin.h
)

QT4_WRAP_CPP(GStreamerPlugin_SRCS ${GStreamerPlugin_HDRS})

ADD_LIBRARY(utopiaplayer_gstreamer_plugin SHARED ${GStreamerPlugin_SRCS})

TARGET_LINK_LIBRARIES(utopiaplayer_gstreamer_plugin ${QT_LIBRARIES} ${LIBXML_LD_FLAGS} ${GLIB_LD_FLAGS} ${GST_LD_FLAGS})

INSTALL(TARGETS utopiaplayer_gstreamer_plugin DESTINATION share/utopiaplayer/plugins/output)
